2002-11-18  David Hyatt  <hyatt@apple.com>

	Yay! Found the main cause of :hover feedback being so
	slow on links.  The diff function for styles was
	considering a color change as a containing block layout
	instead of just a repaint.  With this fix, we will no
	longer lay out when you hover over a link whose color
	is different (remember that laying out causes the whole
	page to repaint).

	There's still some work to do to optimize this further,
	since we do repaint the containing block still, but this
	should be good enough for beta.
	
        * khtml/rendering/render_style.cpp:
        (RenderStyle::diff):

2002-11-17  David Hyatt  <hyatt@apple.com>

	Don't use the immediate painting code for now.  Revert
	to non-immediate code.  Using the non-immediate path I
	have managed to fix all the regressions except for 
	mrskin losing updates in its marquee (this works only with
	immediate painting) and the general scrollbar regression 
	(which I just don't understand).
	
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close):
        * khtml/rendering/render_object.cpp:
        (RenderObject::setLayouted):
        * khtml/rendering/render_root.cpp:
        (RenderRoot::repaintRectangle):
        (RenderRoot::repaint):

2002-11-17  David Hyatt  <hyatt@apple.com>

	More refinements to immediate painting code.  Still doesn't
	fix the scrollbar problem though. :(
	
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close):
        * khtml/khtmlview.cpp:
        (KHTMLView::init):
        (KHTMLView::timerEvent):

2002-11-17  David Hyatt  <hyatt@apple.com>

	Make immediate repainting of the root element more robust.
	
        * khtml/html/html_documentimpl.cpp:
        (HTMLDocumentImpl::close):
        * khtml/khtmlview.cpp:
        (KHTMLView::unscheduleRepaint):
        * khtml/khtmlview.h:
        * khtml/rendering/render_root.cpp:
        (RenderRoot::repaint):

2002-11-17  Darin Adler  <darin@apple.com>
